testSF/force-app/main/default/objects/Book__c/fields/Active_Lendings__c.field-meta.xml
<CustomField>
    <fullName>Active_Lendings__c</fullName>
    <label>Active Lendings</label>
    <summaryFilterItems>
        <field>Lending__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Lending__c.Book__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>