testSF/force-app/main/default/objects/Book__c/fields/Available_Copies__c.field-meta.xml
<CustomField>
    <fullName>Available_Copies__c</fullName>
    <formula>Total_Number_of_Copies__c  -  Active_Lendings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>