testSF/force-app/main/default/objects/Book__c/fields/Availables_copies__c.field-meta.xml
<CustomField>
    <fullName>Availables_copies__c</fullName>
    <formula>Total_Number_of_Copies__c  -  Active_Lendings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availables copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>