testSF/force-app/main/default/objects/Book__c/fields/Total_Number_of_Copies__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Copies__c</fullName>
    <label>Total Number of Copies</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>